# netctl

./: CLAUDE.md  CLAUDE.md.bak  Cargo.toml  README.md  versions.json
src/: bandwidth.rs  block.rs  connections.rs  display.rs  dns.rs  main.rs  ping.rs  speed.rs  utils.rs  vpn.rs
