[package]
name = "netctl"
version = "0.1.0"
edition = "2021"
authors = ["Angel Samuel Suesca Rios <suescapsam@gmail.com>"]
description = "Network monitoring and management CLI"
license = "MIT"

[[bin]]
name = "netctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.33"
colored = "2"
tabled = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
futures-util = "0.3"
trust-dns-resolver = "0.23"
dns-lookup = "2"
